# movieknight

./: .gitignore  README.org  package.json  project.clj  shadow-cljs.edn
backend/: .env  Cargo.toml  build.rs
backend-clj/: CHANGELOG.md  project.clj
backend-clj/dev/: dev.clj
backend-clj/src/backend/: client.clj  core.clj  events.clj  server.clj  socket.clj  system.clj
backend-clj/test/backend/: test_utils.cljc
backend-rust/: .env  Cargo.toml
backend-rust/api/: Cargo.toml  build.rs
backend-rust/api/src/: jikan.rs
backend-rust/db/src/: lib.rs  migrations.rs
backend/api/: Cargo.toml  build.rs
backend/api/src/: main.rs
backend/db/: Cargo.toml
backend/db/src/: lib.rs  test.rs
backend/src/: db.rs  main.rs
dev/: dev.clj
frontend/: .gitignore  package.json  shadow-cljs.edn
frontend/src/app/: api.cljs  db.cljs  macros.clj  main.cljs  search.cljs  socket.cljs  state.cljs  system.clj  system.cljs  ui.cljs  utils.cljs  vote.cljs
frontend/src/app/search/: subs.cljs  views.cljs
frontend/src/app/vote/: subs.cljs  views.cljs
migrations/: init.sql
src/app/: api.cljs  db.cljs  main.cljs  socket.cljs
src/app/search/: events.cljs
src/app/vote/: events.cljs  subs.cljs  views.cljs
src/backend/: db.clj  events.clj  migrations.clj  server.clj  socket.clj  system.clj
src/core/: client.cljc  movie.cljc  user.cljc  vote.cljc
test/backend/: db_test.clj  end_to_end_test.clj  test_utils.cljc
