[package]
name = "movieknight-db"
version = "0.1.0"
authors = ["Andreas Arvidsson <andreas.arvidson@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0.33"
rand = "0.7.3"
tokio = "0.2.22"
hex = "0.4.2"
futures = "0.3.7"

[dependencies.sqlx]
version = "0.4.0-beta.1"
default-features = false
features = [ "runtime-tokio", "macros", "postgres" ]